# tera

./: .gitignore  Cargo.toml  README.md  pom.xml
src/: argParser.ts  configLoader.ts  files.rs  index.ts  main.rs  quizzes.rs  types.ts
src/main/java/: Driver.java
src/main/java/answers/: Answer.java
src/main/java/questions/: FuzzyString.java  MultipleChoice.java  Question.java  StrictString.java  TrueFalse.java  Type.java
src/main/java/util/: AnswerFetcher.java  JsonLoader.java  Utils.java
src/main/resources/: example-schema.json
