[package]
name = "tera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
home = "0.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
inquire = "0.3.0"

